--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
   <script src="https://raw.github.com/desandro/vanilla-masonry/master/masonry.min.js"></script>
   <script>
   window.onload = function() {
-    var wall = new Masonry( document.getElementById('container'), {
+    var wall = new Masonry( document.getElementById('montainer'), {
       columnWidth: 100
     });
   };
