--- a/app.css
+++ b/app.css
@@ -241,12 +241,12 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 .article-navigation .article-link {
   display: block;
   float: left;
-  height: 30px;
+/*  height: 30px;
   width: 30px;
 
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
-  border-radius: 15px;
+  border-radius: 15px;*/
 
   background: rgba(0,0,0, 0.3);
   
