--- a/app.css
+++ b/app.css
@@ -439,12 +439,10 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 
 .article-navigation .article-link {
 
-  -moz-border-radius: 15px;
-  -webkit-border-radius: 15px;
-  border-radius: 15px;
-
-  background: rgba(0,0,0, 0.3);
-  
-  border: 3px solid #fff;
-
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+border-radius: 10px;
+background: rgba(0, 0, 0, 0.3);
+border: 3px solid white;
+padding: 2px 6px;
 }
