--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
   <script>
   window.onload = function() {
     var wall = new Masonry( document.getElementById('montainer'), {
+      isFitWidth: true
     });
   };
 </script>
