--- a/app.css
+++ b/app.css
@@ -232,10 +232,12 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 
 
 .article-navigation {
-  width: 800px;
+  width: 95%;
   margin: 0 auto;
   margin-top: 30px;
   overflow: auto;
+  padding-bottom: 50px;
+
 }
 
 /*.article-navigation .article-link {
@@ -255,17 +257,16 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 }*/
 
 .article-link:hover, .article-link.active {
-  background: #078FA2;
+  background: #078FA2 !important;
 }
 
 .article-wrapper {
   background: #fff;
-  padding-bottom: 50px;
 }
 
 .intro {
-  margin-top: 50px;
-  background: #E0E7EB;
+/*  margin-top: 50px;
+*/  background: #E0E7EB;
   /*background: #fff;*/
   padding: 40px;
   padding-bottom: 20px;
@@ -444,5 +445,5 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 border-radius: 10px;
 background: rgba(0, 0, 0, 0.3);
 border: 3px solid white;
-padding: 2px 6px;
+padding: 2px 6px 4px;
 }
