--- a/app.css
+++ b/app.css
@@ -235,8 +235,8 @@ body:before {/* thanks to Maleika (Kohoutec)*/
   width: 95%;
   margin: 0 auto;
   margin-top: 30px;
-  overflow: auto;
-  padding-bottom: 50px;
+/*  overflow: auto;
+*/  padding-bottom: 50px;
 
 }
 
