--- a/app.css
+++ b/app.css
@@ -47,7 +47,7 @@ html {
   Typography
 ---------------------------------------------*/
 html,body {
-  color: #7A8387;
+  color: #666;
   background: #e7eef2;
   -webkit-font-smoothing: antialiased;
   height: 100%;
@@ -56,7 +56,7 @@ html,body {
 
 body,
 textarea,
-input { font: 13px/20px 'OpenSans', sans-serif; }
+input { font: 13px/20px sans-serif; }
 
 a {
   color: #526066;
@@ -232,9 +232,10 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 
 
 .article-navigation {
-  width: 95%;
+  width: 800px;
   margin: 0 auto;
   margin-top: 30px;
+  margin-bottom: 20px;
 /*  overflow: auto;
 */  padding-bottom: 50px;
 
