--- a/app.css
+++ b/app.css
@@ -271,7 +271,7 @@ body:before {/* thanks to Maleika (Kohoutec)*/
   margin: 20px auto;
 }
 
-.intro .meta {
+.intro .meta, .post-content .meta {
   width: 800px;
   margin: 20px auto;
   padding-top: 20px;
@@ -420,12 +420,8 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 }
 
 .article-navigation .article-link {
-
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-border-radius: 10px;
 background: rgba(0, 0, 0, 0.3);
-border: 3px solid white;
+border: 1px dashed white;
 padding: 2px 6px 4px;
 }
 
