--- a/app.css
+++ b/app.css
@@ -259,6 +259,7 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 .intro .title {
   width: 800px;
   margin: 20px auto;
+  line-height: 1em;
   font-size: 36px; 
   margin-bottom: 10px; 
   font-weight: bold;
