--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@
   <div id='footer'>
     <div class="footer-content">
       Site built with <a href="http://github.com/prose/bootstrap">Prose.io on GitHub</a>
+      {% for item in site.categories.articles limit:1 offset:0 %}
+      <span class="meta"> / / Article posted by <a href="http://twitter.com/{{item.author_twitter}}">{{item.author}}</a> on {{ item.date | date: "%B %d, %Y" }} </span>
+{% endfor %}
+
     </div>
   </div> 
   <script src="https://raw.github.com/desandro/vanilla-masonry/master/masonry.min.js"></script>
