--- a/app.css
+++ b/app.css
@@ -255,7 +255,7 @@ body:before {/* thanks to Maleika (Kohoutec)*/
   padding-top: 130px;
   padding-bottom: 20px;
   width: 800px;
-  margin: 20px auto 0;
+  margin: 0px auto;
 }
 
 .intro .title {
