--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -3,20 +3,13 @@ layout: default
 ---
 
 <div class="intro">
-  <div class="title">{{page.title}}</div>
-  <div class="abstract">{{page.abstract}}</div>
+  <h1 class="title">{{page.title}}: 
+    <small class="abstract">{{page.abstract}}</small>
+  </h1>
 </div>
-
+<hr>
 <div class="article-wrapper">
   <div class="help post-content">
     {{ content }}
   </div>
-</div>
-
-<div class="article-navigation" id="montainer">
-  {% for item in site.categories.articles limit:40 offset:0 %}
-    <a class="article-link item {{item.columns}}" href="{{site.baseurl}}{{item.url}}" title="{{item.title}}">
-      <strong>{{item.title}}</strong></br>{{item.abstract}}
-    </a>
-  {% endfor %}
 </div>
