--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -3,9 +3,7 @@ layout: default
 ---
 
 <div class="intro">
-  <h1 class="title">{{page.title}}: 
-    <small class="abstract">{{page.abstract}}</small>
-  </h1>
+  <h1 class="title">{{page.title}}: <small class="abstract">{{page.abstract}}</small></h1>
 </div>
 <hr>
 <div class="article-wrapper">
