--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
     <div id="header">
       <div class="navigation">
-        <a href="{{site.baseurl}}" class="title">Kunst Kerenewek</a>
+        <a href="{{site.baseurl}}" class="title">Kunst Kernewek</a>
       </div>
     </div>
 
